<resources>
    <string name="app_name">accountastock-android</string>
    <string name="title_account">Comptabilité</string>
    <string name="title_inventory">Inventaire</string>
    <string name="title_user">Profil</string>
    <string name="title_login">Connexion</string>
    <string name="title_sign_up">Inscription</string>
    <string name="search_icon_description">Search Icon</string>
    <string name="search_hint">Rechercher</string>
    <string name="title_subscription">Abonnement</string>
    <string name="title_AddTransaction">Nouvelle transaction</string>
</resources>